--- a/Tasks.json
+++ b/Tasks.json
@@ -1,13 +1,25 @@
 {
-  "name of task": "asdf",
-  "task description": "adf",
-  "time task was created": "20:00 5,9,2025",
-  "task id": "task1",
-  "status of task": "todo"
-}{
-  "name of task": "adsf",
-  "task description": "asd",
-  "time task was created": "20:02 5,9,2025",
-  "task id": "task1",
-  "status of task": "todo"
+
+"tasks":[
+
+
+
+
+
+]
+
+
+
+
+}
+{
+  "tasks": [
+    {
+      "name of task": "clean room",
+      "task description": "why",
+      "time task was created": "10:52:7-9-2025",
+      "task id": "task1",
+      "status of task": "todo"
+    }
+  ]
 }
